# keycloak-config-generation

./: .gitignore  LICENSE  README.md  YAML_GUIDE.md  basic-input.yaml  my-realm.json  pyproject.toml  spec_advance.md
examples/: 01-basic-realm.yaml  02-clients-and-roles.yaml  03-users-and-groups.yaml  04-identity-providers.yaml  05-user-federation.yaml  06-authentication-flows.yaml  07-full-configuration.yaml  08-multi-idp-linking.yaml  09-multi-idp-linking-corrected.yaml  10-composite-roles.yaml  11-client-scopes-and-mappers.yaml  12-advanced-realm-settings.yaml  13-identity-provider-mappers.yaml  14-multi-provider-email-linking.yaml
specs/001-create-a-cli/: data-model.md  plan.md  progress.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-enhance-this-project/: data-model.md  plan.md  progress.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-advanced-realm-configuration/: data-model.md  plan.md  progress.md  quickstart.md  research.md  spec.md  tasks.md
src/keycloak_generator/: cli.py  generator.py  models.py
tests/: test_cli.py  test_generator.py  test_models.py
